--- a/44.md
+++ b/44.md
@@ -25,7 +25,9 @@ set @SESSION.time_zone = '+8:00';
  
 
 3. 
-mysqld --max_allowed_packet = 16M![image-20251114223029431](png/image-20251114223029431.png)
+mysqld --max_allowed_packet = 16M
+
+![image-20251114223029431](png/image-20251114223029431.png)
 
 
 
