--- a/45.md
+++ b/45.md
@@ -15,7 +15,9 @@
     - 编译期计算
     - 作为数组大小等需要编译器常量的地方
 
+- [ ] 11_17
 
+  
 
 2. 
 
@@ -30,7 +32,6 @@ template <class T> constexpr bool is_const_v = std::is_const<T>();？
 如何理解 
 is_const?
 是这样写的嘛？
-是
 ```c++
 template <class T> constexpr bool is_const_v = std::is_const<T>::value;
 ```
@@ -45,8 +46,10 @@ int main()
 }
 ```
 
-3. 
-C++14 允许 lumbda 表达式使用auto 作为参数类型
+
+
+
+3. C++14 允许 lumbda 表达式使用auto 作为参数类型
 使其成为泛型.
 
 auto& 表示左值 引用
@@ -63,13 +66,17 @@ int main()
 }
 ```
 
-4. 
-const auto& 和 auto&& 的区别是？
-
-- 答:
-  - 
 
 
+4.  智能指针 shared_ptr
+
+答: 多个shared_ptr 可以共同使用同一块堆内存。并且，由于该类型智能指针在是线上采用的是引用计数机制，即使有一个shared_ptr 指针放弃了堆内存的“使用权”，也不会影响其它指向同一堆内存的shared_ptr 指针 
+
+只有引用计数为0的时候，堆内存才会被自动释放
+
+
+
+5. 
 
 
 
