--- a/46.md
+++ b/46.md
@@ -16,7 +16,11 @@ auto&&      d = 5;
 - auto&& 左值 推导为 T&  右值 推导为 T&&
 - const auto& 引用绑定，不会产生拷贝
 - auto&& 也是引用绑定 同样不产生拷贝
-- 
+
+- [x] 11_17
+
+- [ ] 
+
 
 
 2. 
@@ -46,9 +50,6 @@ losangelous@LosAngelous:~/LosAngelous/Project/test$ ./run2
 
 
 ```c++
-
-
-```
 int main()
 {
 
@@ -67,6 +68,9 @@ int main()
 
   return 0;
 }
+
+```
+
 ```shell
 losangelous@LosAngelous:~/LosAngelous/Project/test$ ./run2
 你好 不是 hello world 
@@ -169,9 +173,8 @@ y = x * 2  所以y的值是: 20
 ```
 
 - 注意这里z 和 顶层的z 已经没有关系了 可以理解为:
-  -
-	```c++ 
-    struct 匿名Lambda {
+  ```c++ 
+	  struct 匿名Lambda {
     int y;
     int z;
     void operator()() const {
@@ -180,21 +183,47 @@ y = x * 2  所以y的值是: 20
     }
     };
     auto lambda1 = 匿名Lambda{ x * 2, 3 }; 
-  	```
+  ```
 
 
 
+4. 
 
+is_integral_v?
+如何理解这个用法
 
+答:
 
+- ```c++
+  template<class T>
+  inline constexpr bool is_integral_v = std::is_integral<T>::value;
+  ```
 
+- 
+```c++
+std::is_integral_v<T>   // 等价于 std::is_integral<T>::value
+```
 
+- 
 
+5. 
 
+```c++
+int main()
+{
 
+  int x = 100'000;
 
+  std::cout << x << " " << std::endl;
 
+  return 0;
+}
+```
 
+```she
+losangelous@LosAngelous:~/LosAngelous/Project/test$ ./run2
+100000 
+```
 
 
 
