--- a/2.md
+++ b/2.md
@@ -13,6 +13,7 @@ vcpkg并不支持 如果我的CMakeLists 使用vcpkg构建项目的时候
     
 
 * [x] 11_7
+* [x] 11_19
 * [ ] 
 
 2. 
@@ -26,12 +27,21 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(LosMq)
 ```
-* [ ] 11_7
-* [ ] 
+* [x] 11_7
+* [x] 11_19
+
+
 
 3. /etc/ld.so.conf 这个文件下面放的都是默认查找的
 
-4. 
+![image-20251119083803318](png/image-20251119083803318.png)
+
+- [x] 11_19
+- [ ] 
+
+
+
+3. 
    ```cmake
    cmake_minimum_required(VERSION 3.20)
    set(CMAKE_CXX_STANDARD 17)
@@ -64,9 +74,21 @@ project(LosMq)
 
 我想知道 这个 private 和 public的区别？
 
+private:
+
+- 属性仅仅用于当前目标的构建
+- 不会传递给连接词目标的其他目标
+
+public:
+
+- 既用于当前目标，也传递给链接此目标的其它目标
+
+
+
 5. muduo_net会自动依赖 muduo_base 
 
-
+- [x] 11_19
+- [ ] 
 
 
 
