--- a/20_操作系统.md
+++ b/20_操作系统.md
@@ -222,6 +222,10 @@ T1说：不行，你要先给我R2，我才能给你R1
 
    windows下面sleep的函数参数是毫秒。
 
+   - [x] 11_19 r
+
+   
+
    例如：
 
    ```
@@ -235,10 +239,15 @@ T1说：不行，你要先给我R2，我才能给你R1
    ```
    #include <unistd.h>// 首先应该先导入头文件 sleep(5); //停5秒 //就是到这里停5秒，然后继续向下执行。
    ```
+   
+   - [ ] 11_19
+   - [ ] 
+
+
 
 2. **wait**
 
-   wait是父进程回收子进程PCB资源的一个系统调用。进程一旦调用了wait函数，就立即阻塞自己本身，然后由wait函数自动分析当前进程的某个子进程是否已经退出，当找到一个已经变成僵尸的子进程，wait就会收集这个子进程的信息，并把它彻底销毁后返回；如果没有找到这样一个子进程，wait就会一直阻塞，直到有一个出现为止。函数原型如下：
+   wait是父进程回收子进程PCB资源的一个系统调用。进程一旦调用了wait函数，就立即阻塞自己本身，然后由wait函数自动分析当前进程的某个子进程是否已经退出，当找到一个已经变成**僵尸**的子进程，wait就会收集这个子进程的信息，并把它彻底销毁后返回；如果没有找到这样一个子进程，wait就会一直阻塞，直到有一个出现为止。函数原型如下：
 
    ```
    #include<sys/types.h>   #include<sys/wait.h>     pid_t wait(int* status);  
@@ -246,9 +255,17 @@ T1说：不行，你要先给我R2，我才能给你R1
 
    子进程的结束状态值会由参数status返回，而子进程的进程识别码也会一起返回。如果不需要结束状态值，则参数status可以设成 NULL。
 
-3. **区别**： （1）sleep是一个延时函数，让进程或线程进入休眠。休眠完毕后继续运行。
+- [x] 11_19
+
+
+
+2. **区别**： （1）sleep是一个延时函数，让进程或线程进入休眠。休眠完毕后继续运行。
 
    （2）wait是父进程回收子进程PCB（Process Control Block）资源的一个系统调用。
+
+- [ ] 11_19
+
+
 
 ### 2.50 说说线程池的设计思路，线程池中线程的数量由什么确定？
 
@@ -256,7 +273,9 @@ T1说：不行，你要先给我R2，我才能给你R1
 
 1. **设计思路**：
 
-   实现线程池有以下几个步骤： （1）设置一个生产者消费者队列，作为临界资源。
+   实现线程池有以下几个步骤： 
+
+   （1）设置一个生产者消费者队列，作为临界资源。
 
    （2）初始化n个线程，并让其运行起来，加锁去队列里取任务运行
 
@@ -264,7 +283,12 @@ T1说：不行，你要先给我R2，我才能给你R1
 
    （4）当生产者队列来了一个任务后，先对队列加锁，把任务挂到队列上，然后使用条件变量去通知阻塞中的一个线程来处理。
 
-2. **线程池中线程数量**：
+- [x] 11_19 b
+- [x] 11_19 r
+
+
+
+1. **线程池中线程数量**：
 
    线程数量和哪些因素有关：CPU，IO、并行、并发
 
@@ -274,23 +298,44 @@ T1说：不行，你要先给我R2，我才能给你R1
 
    所以线程等待时间所占比例越高，需要越多线程。线程CPU时间所占比例越高，需要越少线程。
 
+- [ ] 11_19
+
+
+
 **答案解析**
 
 1. **为什么要创建线程池**：
 
    创建线程和销毁线程的花销是比较大的，这些时间有可能比处理业务的时间还要长。这样频繁的创建线程和销毁线程，再加上业务工作线程，消耗系统资源的时间，可能导致系统资源不足。**同时线程池也是为了提升系统效率。**
 
-2. **线程池的核心线程与普通线程：**
+- [ ] 11_19
+- [ ] 
+
+
+
+1. **线程池的核心线程与普通线程：**
 
    任务队列可以存放100个任务，此时为空，线程池里有10个核心线程，若突然来了10个任务，那么刚好10个核心线程直接处理；若又来了90个任务，此时核心线程来不及处理，那么有80个任务先入队列，再创建核心线程处理任务；若又来了120个任务，此时任务队列已满，不得已，就得创建20个普通线程来处理多余的任务。 **以上是线程池的工作流程。**
 
+- [ ] 11_19
+
+
+
 ### 2.51 进程和线程相比，为什么慢？
+
+
 
 **参考回答**
 
 1. 进程系统开销显著大于线程开销；线程需要的系统资源更少。
 2. 进程切换开销比线程大。多进程切换时需要刷新TLB并获取新的地址空间，然后切换硬件上下文和内核栈；多线程切换时只需要切换硬件上下文和内核栈。
 3. 进程通信比线程通信开销大。进程通信需要借助管道、队列、共享内存，需要额外申请空间，通信繁琐；而线程共享进程的内存，如代码段、数据段、扩展段，通信快捷简单，同步开销更小。
+
+- [ ] 11_19
+
+
+
+
 
 ### 2.52 简述Linux零拷贝的原理？
 
@@ -300,7 +345,9 @@ T1说：不行，你要先给我R2，我才能给你R1
 
    所谓「零拷贝」描述的是计算机操作系统当中，CPU不执行将数据从一个内存区域，拷贝到另外一个内存区域的任务。通过网络传输文件时，这样通常可以节省 CPU 周期和内存带宽。
 
-2. **零拷贝的好处**：
+
+
+1. **零拷贝的好处**：
 
    （1）节省了 CPU 周期，空出的 CPU 可以完成更多其他的任务
 
@@ -310,7 +357,9 @@ T1说：不行，你要先给我R2，我才能给你R1
 
    （4）应用零拷贝技术，减少用户态和内核态之间的上下文切换
 
-3. **零拷贝原理**：
+
+
+1. **零拷贝原理**：
 
    在传统 IO 中，用户态空间与内核态空间之间的复制是完全不必要的，因为用户态空间仅仅起到了一种数据转存媒介的作用，除此之外没有做任何事情。
 
@@ -319,6 +368,8 @@ T1说：不行，你要先给我R2，我才能给你R1
    过程如图：
 
    ![img](https://uploadfiles.nowcoder.com/images/20220225/4107856_1645789166048/4A87E5DF037724AD29149500F8535B8B)
+
+   
 
    a. 发起 sendfile() 系统调用，操作系统由用户态空间切换到内核态空间（第一次上下文切换）
 
