--- a/51.md
+++ b/51.md
@@ -39,8 +39,53 @@ vim /etc/mysql/my.cnf
 
 
 
-
-
-
-
 4. 
+
+信号与槽（Signals & Slots）是Qt框架的精髓。您能从其底层实现机制（例如，MOC元对象编译器扮演的角色）上，解释一下信号与槽是如何工作的吗？与传统的回调函数（Callback）相比，它具备哪些独特的优势和潜在的劣劣势？
+
+答：
+
+- MOC 当我们在头文件使用 Q_OBJECT宏的时候，Qt的构建系统会在编译前调用MOC。MOC会解析这些头文件，为包含Q_OBJECT的类生成一个额外的C++源文件
+
+- [x] 11_18
+
+- [ ] 11_18
+
+
+
+- 这个源文件 包含了 类的元信息，如类的名字，信号和槽的名称，并实现了 metaObject()等函数
+
+- [ ] 11_18
+
+- [ ] 
+
+
+
+- 调用connect的时候，Qt会使用这些元信息，通过字符串查找或者函数指针，来记录信号和槽之间的连接关系，并存储在一个内部的数据结构中
+
+- [ ] 11_18
+
+
+
+- 当使用 emit关键字的时候，发射一个信号，本质是一个空的宏，会调用MOC生成的信号实现代码，这段信号会遍历与该信号关联的连接列表，并根据连接类型来调用对应的槽函数
+
+- [ ] 11_18
+
+
+
+5. 
+
+GB28181 标准
+
+
+
+
+
+
+
+
+
+
+
+
+
