--- a/59.md
+++ b/59.md
@@ -10,8 +10,8 @@ select和epoll的区别
 | **内存拷贝**           | 每次调用都涉及用户空间和内核空间的大量拷贝               | 使用**共享内存(mmap)**，避免不必要的拷贝           |
 | **触发模式**           | 仅支持**水平触发 (LT)**                                  | 支持**水平触发 (LT)** 和 **边缘触发 (ET)**         |
 
-- [ ] 11_19 左
-- [ ] 11_19 右
+- [x] 11_20 左 r
+- [ ] 11_19 右 
 
 
 
@@ -79,8 +79,22 @@ select和epoll的区别
 
 **边缘触发（ET）**：高效模式，当事件就绪时，应用程序必须立即处理，否则不会再次通知
 
-- [ ] 11_19
+- [x] 11_19
 - [ ] 
+
+
+
+为什么 select 不支持 边缘触发？
+
+答：调用前，需要手动创建一个fd_set把你所有关心的FD通过fd_set加进去
+
+调用select（），你把这个fd_set传递给内核，select（）函数会阻塞，知道你关心的FD中至少有一个就绪
+
+当然select（） 返回时，内核就会修改你传入的那个fd_set，把所有“未就绪”的FD从集合中移除，你得到的fd_set只剩下那些1当前处于就绪状态的FD
+
+你需要遍历整个 fd_set 用fd_isset 来检查哪个FD仍然在集合里面，然后对它进行处理
+
+
 
 
 
