--- a/60.md
+++ b/60.md
@@ -1,7 +1,5 @@
-1. MQTT协议
+1. 物联网协议
 
-1. 
-物联网协议
 - 简单利用
 - 轻量高效
 - 可靠的消息传递
@@ -9,10 +7,19 @@
 - 安全的双向通信
 - 多平台支持
 
+- [ ] 11_25
 
-2. 
-详细介绍一下 mQTT协议
+
+
+
+2. 详细介绍一下 mQTT协议
 一种基于 发布/订阅 模式的 轻量级的消息传输协议
+
+- [ ] 11_25
+
+
+
+
 
 
 3. 
@@ -33,12 +40,15 @@
 
   - 将 CPU 时间划分为 一个个时间片 , 公平地分配给每个进程 ; 这是专门为分时系统设计的抢占式算法	
 
-- [ ] 11_19
+- [x] 11_19
+
+- [ ] 11_25
 
 
 
 - 多级队列调度
-  - 
+  - ![image-20251125093955064](png/image-20251125093955064.png)
+
 
 
 - [ ] 11_19
@@ -61,7 +71,9 @@
   - 如果一个低优先级进程长时间等待，可以将其**提升**到更高优先级的队列（老化机制），防止饥饿。
   - 通常，I/O密集型进程会保持在高优先级队列，而CPU密集型进程会逐渐下降到低优先级队列
 
-- [ ] 11_19
+- [x] 11_19
+
+- [ ] 
 
 
 
@@ -77,7 +89,8 @@
     - **高效**: 使用红黑树来管理就绪进程，可以非常快地找到vruntime最小的进程。
 
 
-- [ ] 11_19
+- [x] 11_19
+- [ ] 
 
 
 
