--- a/79.md
+++ b/79.md
@@ -85,9 +85,9 @@ ranges::in_fun_result
 答：
 这个 res的返回值 就是 **`std::ranges::in_fun_result`**
 
-in是哪里停止了
+in是哪里停止了  返回结束的迭代器
 
-fun 放进去的
+fun 放进去的**状态函数**
 
 
 
