--- a/82.md
+++ b/82.md
@@ -1,5 +1,92 @@
-1. 
+1. [c++]
+
+unordered_map
+如果不是声明初始化
+那要调用什么函数 进行初始化 
+
+答： 直接使用 [] 就行
 
 
 
-2. 
+2. [Qt]
+
+T qBound(const T &min, const T &val, const T &max);
+
+
+
+- min 是允许的最小值
+- val 需要被检查的和限制的原始的值
+- max 是 允许的最大值
+
+
+
+3. 
+
+setDragMode(QGraphicsView::ScrollHandDrag);
+setRenderHint(QPainter::Antialiasing);
+
+如何理解这两个 对于 类 QGraphicsView
+
+
+
+- ScrollHandDrag 设置了之后 用户可以像 谷歌地图或PDF阅读器那样
+
+用鼠标抓住 不放
+
+- Antialiasing 抗锯齿 好看一点
+
+
+
+4. 
+
+QGraphicsScene 这个对于 QGraphicsView 的意义是？
+
+
+
+- QGraphicsView 就是一个 观众或摄像机 拍摄 QGraphicsScene （舞台） QGraphicsItem（演员道具）
+
+- [x] 11_26
+
+
+
+
+
+5. 
+
+```c++
+class LosTool : public QObject
+{
+    Q_OBJECT
+public:
+    explicit LosTool(QObject *parent = nullptr);
+    virtual ~LosTool() = default;
+
+private:
+    virtual void mousePressEvent(QMouseEvent *event, QGraphicsScene *scene) = 0;
+    virtual void mouseMoveEvent(QMouseEvent *event, QGraphicsScene *scene) = 0;
+    virtual void mouseReleaseEvent(QMouseEvent *event, QGraphicsScene *scene) = 0;
+
+signals:
+};
+```
+
+我有个问题 
+其实 这几个 的 mousePress的函数签名并不和 库里面的一致
+可以的嘛 作为自己定义的？
+
+
+
+是可以的 因为这个提供的是一个接口 需要 继承类 去实现它的 没有问题哦
+
+- [x] 11_26
+
+
+
+
+
+
+
+
+
+
+
