--- a/83.md
+++ b/83.md
@@ -1,3 +1,7 @@
+计算机网络
+
+
+
 1.
 
  QRectF
@@ -26,11 +30,77 @@
     ```
 
 
+
 2. 
 
+路由器
+
+- 可以把两个或多个计算机网络互相连接起来，形成规模更大的计算机网络，称为**互连网**
 
 
 
+家用路由器 其实是 路由器+交换机+其它功能
+
+
+
+
+
+![image-20251128223354588](png/image-20251128223354588.png)
+
+
+
+- [x] 11_28
+- [ ] 
+
+
+
+交换机 可以把多个结点连接起来，组成一个计算机网络
+
+- [ ] 11_28
+
+
+
+ISP internet Service Provider 即 互连网服务提供商，如中国电信，移动，联通
+
+- [x] 11_28
+
+
+
+互联网，由各大ISP和国际机构组件的，覆盖全球范围的互连网
+
+- [x] 11_28
+
+
+
+3. 
+
+如何理解 TCP/IP协议：
+
+互联网 必须 使用 TCP/IP协议通信，互连网可使用任意协议通信
+
+- [x] 11_28
+
+
+
+4. 
+
+快背吧
+
+![image-20251128224145113](png/image-20251128224145113.png)
+
+- [x] 11_28
+
+
+
+
+
+5. 
+
+ARPANET 是什么
+
+世界上第一个可操作的，基于分组交换技术的广域计算机网络
+
+- [x] 11_28
 
 
 
