--- a/84.md
+++ b/84.md
@@ -1,2 +1,60 @@
-1. 
+1. qInstallMessageHandler(logMessageHandler);
+这个安装之好 后 就会 修改 qDebug的默认行为么
+
+- 是的
+- qInstallMessageHandler 就是Qt 提供的一个全局钩子 用来拦截和重定义Qt日志消息的处理方式
+
+- 必须严格 遵守
+    - void FunctionName(QtMsgType type, const QMessageLogContext &context, const QString &msg) 这个函数签名
+    - ![alt text](./png/image.png)
+    - QMessageLogContext 是一个结构体 包含了日志的上下文
+    - 实际的消息 
+
+- qInstallMessageHandler(logFileHandler);
+调用这个进行安装
+
+
+2. 
+QTextStream
+处理人类刻度的文本数据
+QDataStream
+处理机器可读的二进制数据
+
+
+3. 
+QString filePath = QFileDialog::getOpenFileName(
+    this,
+    tr("选择图片"),
+    ".",
+    tr("图片文件 (*.png *.jpg *.jpeg *.bmp)")
+);|
+
+如何 理解？
+
+- tr() 会把字符串标记为“可翻译” 
+
+- . 表示默认打开的目录
+
+- tr("图片文件 (*.png *.jpg *.jpeg *.bmp)") 
+这个是图片过滤器
+
+4. 
+如果 QGraphicsView是这个 该如何设置图片进入呢
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
