--- a/随手笔记/84.md
+++ b/随手笔记/84.md
@@ -38,8 +38,9 @@ QString filePath = QFileDialog::getOpenFileName(
 - tr("图片文件 (*.png *.jpg *.jpeg *.bmp)") 
 这个是图片过滤器
 
-4. 
-如果 QGraphicsView是这个 该如何设置图片进入呢
+5. 
+virtual  ~ToolItem() = default;
+对于多态 基类 是必要的
 
 
 
