--- a/随手笔记/81.md
+++ b/随手笔记/81.md
@@ -3,12 +3,18 @@
 bad_any_cast
 
 ```c++
-try {
+    try 
+    {
         int number = std::any_cast<int>(data);  // 抛出 std::bad_any_cast
-    } catch (const std::bad_any_cast& e) {
+    } 
+    catch (const std::bad_any_cast& e) 
+    {
         std::cout << "转换失败: " << e.what() << std::endl;
     }
 ```
+
+- [x] 12_21
+- [ ] 
 
 
 
@@ -40,6 +46,9 @@ int main()
 }
 ```
 
+- [x] 12_21
+- [ ] 
+
 
 
 3. [c++]
@@ -69,6 +78,11 @@ int main() {
 
 定长的 array 的结构
 
+- [x] 12_21
+- [ ] 
+
+
+
 
 
 4. [c++]
@@ -77,6 +91,11 @@ int main() {
 
 因为 ssize 返回的是 容器的大小 
 
+- [x] 12_21
+- [ ] 
+
+
+
 
 
 5. 
@@ -84,6 +103,21 @@ int main() {
 ptrdiff_t  如何理解 以及 这个的本质是什么
 
 ptrdiff_t 本质是？ 用于表示指针差值的类型
+
+- [x] 12_21
+- [ ] 
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
