--- a/随手笔记/84.md
+++ b/随手笔记/84.md
@@ -14,11 +14,14 @@
 调用这个进行安装
 
 
-2. 
-QTextStream
+
+
+2. QTextStream
 处理人类刻度的文本数据
 QDataStream
 处理机器可读的二进制数据
+
+
 
 
 3. 
@@ -38,10 +41,22 @@ QString filePath = QFileDialog::getOpenFileName(
 - tr("图片文件 (*.png *.jpg *.jpeg *.bmp)") 
 这个是图片过滤器
 
-5. 
-virtual  ~ToolItem() = default;
-对于多态 基类 是必要的
 
+
+
+
+4. 
+
+https://api-docs.deepseek.com/zh-cn/
+
+
+
+deepseek api的官方文档
+
+
+
+5. virtual  ~ToolItem() = default;
+对于多态 基类 是必要的
 
 
 
