--- a/随手笔记/85.md
+++ b/随手笔记/85.md
@@ -1,2 +1,100 @@
 1. 
 
+void	cursorPositionChanged(int oldPos, int newPos)
+void	editingFinished()
+void	inputRejected()
+void	returnPressed()
+void	selectionChanged()
+void	textChanged(const QString &text)
+void	textEdited(const QString &text)
+
+详细介绍一下这六个信号
+
+
+
+textEdit 是用户引发的改变 才会触发的信号
+
+textChange  是任何方式发生的改变 才会发出信号
+
+editingFinished 是失去焦点的时候 才会发出信号
+
+returnPressed 就是恢复焦点 或者 用户按下了回车或者return按钮的时候 才会触发
+
+selectionChanged 就是 用户鼠标拖拽选择文本 或者 shift方向键选择文本 用户双击或三击选择单词或者整行
+
+cursorPositionChanged 光标位置发生改变发送的信号
+
+
+
+2. 
+
+void	activated(int index)
+void	currentIndexChanged(int index)
+void	currentTextChanged(const QString &text)
+void	editTextChanged(const QString &text)
+void	highlighted(int index)
+void	textActivated(const QString &text)
+void	textHighlighted(const QString &text)
+
+详细介绍一下这个信号
+
+
+
+currentIndexChanged(int index)  就是选中的索引发生改变了 
+
+currentTextChanged(const QString& text) 当选中的文本发生了改变
+
+highlighted(int index) 就是选中的东西被高亮了 就会发送这个信号
+
+textHighlighted(const QString& text) 这个和上面那个 类似 但是传递的是 文本
+
+editTextChanged(const QString& text) 这个传递的是 可编辑的QComboBox的文本
+
+
+
+
+
+3. 
+
+mkpath和mkdir对于QDir的区别是？
+
+mkdir 就是创建单极目录 如果父目录不存在 就会返回false
+
+mkpath 会递归创建所有的目录
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
