--- a/随手笔记/85.md
+++ b/随手笔记/85.md
@@ -66,7 +66,18 @@ mkpath 会递归创建所有的目录
 
 
 
+4. 
 
+QGraphicsItem 和 QGraphicsPixmapItem
+
+- 前者是基类 后者 是 子类
+- 后者是一个位图 专门用于显示图片
+
+
+
+5. 
+
+QMetaObject 是 QObject 的说明书
 
 
 
