--- a/随手笔记/44.md
+++ b/随手笔记/44.md
@@ -1,4 +1,4 @@
-1.
+1.[mysql]
 
  ```shell
  set persist max_connections = 1000
@@ -11,8 +11,9 @@
 
 
 
-2. 
-设置 Session 系统变量
+2. [mysql]
+
+  设置 Session 系统变量
 
 ```shell
 SET SESSION time_zone = '+8:00';
@@ -23,6 +24,8 @@ set @SESSION.time_zone = '+8:00';
 只是对当前的连接 生效
 
  
+
+
 
 3. 
 mysqld --max_allowed_packet = 16M
@@ -60,6 +63,10 @@ double pi3.14159
 ```
 
 - constexpr 这个就可以 满足 编译的时候 就给你算好了
+
+- [x] 26_1_7
+
+
 
 
 5. 
