--- a/随手笔记/91.md
+++ b/随手笔记/91.md
@@ -107,9 +107,36 @@ let mut f = File::open("hello.txt")?;
 
 
 
+5. 
+
+```rust
+        let _blank = MyBlank::new("trait 的学习");
+
+        pub trait MakeVoice {
+            fn voice(&self) -> String;
+        }
+
+        struct Cat {
+
+        }
+
+        impl MakeVoice for Cat {
+            fn voice(&self) -> String {
+                String::from("miew miew miew")
+            }
+        }
+
+        let cat1 = Cat{};
+        let voice_content = cat1.voice();
+        println!("{}",&voice_content);
+```
+
+trait 的学习
+miew miew miew
 
 
 
+- [x] 26_1_7
 
 
 
