--- a/随手笔记/93.md
+++ b/随手笔记/93.md
@@ -34,3 +34,41 @@ ui->dirBtn->setIconSize(STEP_THREE_TOOL_ICON_SIZE);
 
 
 
+3.  [安卓]
+
+Runnable
+是一个什么类？
+
+- 这个是一个 接口
+- 
+
+
+
+4. 
+
+        SharedPreferences appPrefs = getSharedPreferences("AppSettings", Context.MODE_PRIVATE);
+
+如何理解 Context.MODE_PRIVATE？
+
+
+
+- 这个文件是私有的 只有我的app才能访问
+
+
+
+5. [安卓]
+
+private Handler quoteHandler = new Handler(Looper.getMainLooper());
+
+如何理解 Hander？
+
+
+
+- 
+
+
+
+
+
+
+
