1_24:rust项目许欸小

--- a/随手笔记/109.md
+++ b/随手笔记/109.md
@@ -20,8 +20,92 @@
 
 2. 
 
-拿到 一个 QJsonArray
-如果要解析里面的数据
-我们第一步要做什么？
+BufReader::new
+需要的参数是什么？
 
+
+
+- 这个 参数 必须实现了 **必须是一个实现了 `AsyncRead`**
+- 包括 TcpStream
+- 包括 ReadHalf
+- tokio
 - 
+
+
+
+
+
+3. 
+
+注意设计的盲点
+
+```rust
+#[tokio::main]
+async fn main() -> Result<(), Box<dyn Error>> {
+    let (read_half, mut write_half) = socket.into_split();
+
+    // 任务1：后台听消息
+    tokio::spawn(async move {
+        // ... 读取服务器代码 ...
+    });
+
+    // 任务2：后台读键盘（假设我们也 spawn 了）
+    tokio::spawn(async move {
+        // ... 读取键盘代码 ...
+    });
+
+    // ---> 代码运行到这里，main 函数结束了！
+    // ---> 整个进程销毁，任务1和任务2还没来得及跑就被杀死了。
+    Ok(())
+}
+```
+
+
+
+
+
+4. 
+
+    let socket = TcpStream::connect("127.0.0.1:6379").await?;
+
+这个socket的两个addr分别是什么意思？
+
+
+
+- socket.local_addr() 本地信息
+- socket.peer_addr() 远程信息
+
+
+
+5. 
+
+如果本地已经有了 一个 .git 我要如何 和 远端仓库 进行联系呢？
+详细讲解一下
+
+- 第一步 就是 先 git add git commit 把东西先放在仓库里面
+- 第二部 就是 改主要的分支 git branch -M main
+- 第三步 就是 git remote add origin <远端仓库链接>
+- 第四步 就是 git push -u origin main 就可以推送过去了
+
+
+
+
+
+
+
+
+
+1
+
+
+
+
+
+
+
+
+
+
+
+
+
