--- a/随手笔记/122.md
+++ b/随手笔记/122.md
@@ -28,6 +28,30 @@ EncodingKey::from_secret
 
 - pub fn from_secret(secret: &[u8]) -> Self
 
+- [ ] 1_26
+
+
+
+如何理解 EncodingKey ？
+
+- 私有印章 生成器
+
+- [ ] 1_26
+
+
+
+`from_secret` 对应的是 **HS256**（HMAC with SHA-256）算法
+
+对称加密算法 加密和解密 用的是同一个字符串
+
+- [ ] 1_26
+
+
+
+
+
+
+
 
 
 3. [rust]
