--- a/随手笔记/125.md
+++ b/随手笔记/125.md
@@ -2,3 +2,165 @@
 
 如何创建 react 项目？
 
+```shell
+npm create vite@latest LosGateFronted -- --template react-ts
+```
+
+
+
+◆  Use rolldown-vite (Experimental)?:
+│  ○ Yes
+│  ● No
+
+这个是什么意思
+
+- **Rolldown** 是 Vite 团队正在开发的一个全新的**打包工具（Bundler）**。 它的核心卖点是：**它是完全用 Rust 编写的**
+
+- 不稳定
+- 报错风险
+
+- [x] 26_1_25
+
+
+
+
+
+2. 
+
+```tsx
+const [count, setCount] = useState(0)
+```
+
+如何理解 tsx
+如何理解 这个 用法？
+
+
+
+- TypeScript XML 就是 tsx
+- `useState` 的作用是：**告诉 React，这个变量很重要，当它改变时，请帮我重新“刷”一遍界面**
+
+- [ ] 26_1_25
+
+
+
+
+
+3. 
+
+```shell
+npm install -D tailwindcss postcss autoprefixer
+npx tailwindcss init -p
+
+如何理解 这两个指令？
+```
+
+- **`-D`**  表示 开发阶段使用
+
+- 
+
+  - ```
+    npx tailwindcss init -p
+    ```
+
+    这行命令相当于运行一个初始化脚本，生成两个重要的配置文件。
+
+    - **`npx`**:
+      - **类比**：`cargo run`。
+      - **含义**：它会直接从本地的 `node_modules` 文件夹里寻找并运行 `tailwindcss` 那个工具，而不需要你全局安装它。
+    - **`init`**:
+      - **含义**：初始化。它会生成一个 `tailwind.config.js` 文件。
+      - **作用**：这个文件就像是项目的“样式蓝图”，你在这里规定你的黑白主题颜色、字体、扫描哪些文件夹等。
+    - **`-p`**:
+      - **含义**：同时生成 `postcss.config.js`。
+      - **作用**：告诉系统：“嘿，我要用 PostCSS 来运行 Tailwind”。这个文件配置了 CSS 编译的管道（Pipeline），让 Tailwind 能够介入编译过程
+
+
+
+
+
+4. [css]
+
+```css
+  background-image: 
+    linear-gradient(#f0f0f0 1px,transparent 1px),
+    linear-gradient(90deg, #f0f0f0 1px , transparent 1px);
+```
+
+
+
+- `linear-gradient(#f0f0f0 1px, transparent 1px)` 的意思是：
+  - 从 0px 到 1px 是 `#f0f0f0`（浅灰色）。
+  - 从 1px 往后全部是 `transparent`（透明）。
+- **结果**：这就在容器的最顶部产生了一条 **1像素高的水平线**
+
+- 第一个是 水平线
+- 第二个是竖直线
+
+
+
+5. 
+
+const response = await axios.post(url , {
+        username: username,
+        password: password
+      });
+
+这里的 response 是完整的 后端返回的json么？
+
+
+
+- 不是
+
+  - ```json
+    {
+      // 1. data: 这才是你后端返回的真正的 JSON 内容
+      data: { 
+        id: 1, 
+        token: "abc.def.ghi", 
+        message: "Login success" 
+      },
+    
+      // 2. status: HTTP 状态码 (如 200, 201, 401, 500)
+      status: 200,
+    
+      // 3. statusText: 服务器返回的状态描述 (如 "OK")
+      statusText: "OK",
+    
+      // 4. headers: 后端返回的所有响应头
+      headers: { ... },
+    
+      // 5. config: 你发送请求时传给 axios 的配置
+      config: { ... },
+    
+      // 6. request: 浏览器底层的 XMLHttpRequest 对象
+      request: { ... }
+    }
+    
+    ```
+
+  - 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
