--- a/随手笔记/129.md
+++ b/随手笔记/129.md
@@ -1,6 +1,112 @@
 1. [react]
 
-发送邮箱验证码的 逻辑
+   我有个 问题 如何 在登陆界面 成功后 进行跳转呢？
+
+const navigate = useNavigate();
+
+navigate("/dashboard");
+
+- [ ] 26_1_27
+
+
+
+```react
+const handleLogin = () => {
+  // 登录成功后
+  navigate("/dashboard", { 
+    state: { 
+      username: "Neo_Han", 
+      role: "admin",
+      lastLogin: new Date().toISOString()
+    } 
+  });
+};
+```
+
+- [ ] 26_1_27
+
+
+
+2. 
+
+redis 有问题
+如何 通过 powershell 排查redis的网络 连接等问题？
+
+- [ ] 26_1_27
+
+docker ps --filter "name=redis"
+
+进行排查对应的名字是否存在
+
+
+
+
+
+3. [react]
+
+useEffect
+如何理解这个函数 
+以及 对应的 参数设置
+react?
+
+- 在 React 中，组件的主要工作是“根据数据渲染 UI”。除此之外的事情都叫“副作用”
+- useEffect 的作用就是：告诉 React 在页面渲染完成后，去执行这段副作用代码
+
+```js
+useEffect(() => {
+  // 参数1: 要执行的代码 (Effect 函数)
+
+  return () => {
+    // 可选: 清理函数 (Cleanup 函数)
+  };
+}, [/* 参数2: 依赖数组 (Dependency Array) */]);
+```
+
+```react
+useEffect(() => {
+  // 如果倒计时大于 0
+  if (countdown > 0) {
+    // 开启一个 1 秒后的定时器
+    const timer = setTimeout(() => setCountdown(countdown - 1), 1000);
+    
+    // 【清理函数】：
+    // 在下一次 useEffect 执行前（即 countdown 变了之前），
+    // 先把上一个定时器关掉。
+    return () => { clearTimeout(timer) };
+  }
+}, [countdown]); // 【依赖项】：只要 countdown 变了，就重新运行这段逻辑
+```
+
+
+
+4. [react]
+
+```react
+<div className="min-h-screen flex flex-col items-center justify-center p-4">
+
+这种如何理解？
+```
+
+- **`min-h-screen`** 让这个最小的高度 等于整个屏幕的高度
+- **`flex`** 开启弹性布局
+- **`flex-col`** 从上到下 进行排序
+- justify-center 垂直居中
+- items-center 水平居中
+
+
+
+5. [react]
+
+<p className="text-xl font-black font-mono">`${localtion_state?.username}`</p>
+
+如何加一个 逻辑
+如果 localtion_state的 role 是 0 那么 就写上viewer 如果 是 1 那么就写上admin？
+
+
+
+
+
+
 
 
 
