--- a/随手笔记/88.md
+++ b/随手笔记/88.md
@@ -2,8 +2,6 @@
 
 qt里面安全的强制类型转换是？
 
-
-
 qobject_cast 强制类型转换
 
 如果转换失败 就返回 nullptr
@@ -12,6 +10,27 @@ qobject_cast 强制类型转换
 
 - [x] 26_1_4
 - [ ] 
+
+
+
+T *qobject_cast<T *>(QObject *object)
+
+不需要 RTTI（运行时类型识别）
+
+这是它与标准 `dynamic_cast` 最大的区别：
+
+- `dynamic_cast` 依赖于编译器的 RTTI（通常会增加二进制文件体积）。
+- `qobject_cast` 依赖于 Qt 的**元对象系统 (moc)**。即使在禁用编译器 RTTI 的情况下，它依然能正常工作
+
+- [ ] 26_1_27
+
+
+
+它运行的时候是安全的
+
+返回0或者是nullptr 如果失败的话
+
+- [ ] 26_1_27
 
 
 
@@ -25,6 +44,8 @@ qobject_cast 强制类型转换
 
 -  因为 RectItem 是一个 有形状的
 - 所以不能直接继承 QGraphicsObject  因为这个没有形状
+
+- [ ] 26_1_27
 
 
 
@@ -55,7 +76,7 @@ namespace NS_HsStepOneWidgetUi
 
 - 答：声明：父类 QGraphicsRectItem 的所有构造函数，我这里都能直接用
 
-
+- [x] 26_1_27
 
 ```c++
 class Father {
@@ -124,6 +145,7 @@ this->setCursor(QCursor(pix, 0, 31));
 橡皮一般是左下角
 
 - [x] 26_1_6
+- [x] 26_1_27
 - [ ] 
 
 
@@ -137,9 +159,16 @@ constexpr 为什么不能和QString组合？
 因为 QString 需要在“运行时”分配堆内存（Heap Memory），而 constexpr 要求所有的计算和初始化必须在“编译时”完成
 
 - [x] 26_1_6
+- [x] 26_1_27
 - [ ] 
 
 
+
+cmake -G "Visual Studio 15 2017" -A x64 -DCMAKE_PREFIX_PATH="D:/Qt/5.15.2/msvc2015_64" ..
+
+- 指定版本信息的写法
+
+- [ ] 26_1_27
 
 
 
