--- a/随手笔记/134.md
+++ b/随手笔记/134.md
@@ -27,7 +27,9 @@
   
   ```
 
-- [ ] 26_1_28
+- [x] 26_1_28
+
+
 
 
 
@@ -51,7 +53,8 @@ emplace_back 在底层都做了什么
 
 它直接在 vector 管理的内存末尾，调用构造函数**就地构造**元素，省去了先构造临时对象再拷贝/移动的步骤
 
-- [ ] 26_1_28
+- [x] 26_1_28
+- [ ] 
 
 
 
@@ -61,7 +64,15 @@ vector的 内存扩展的时候 到底是将原来的元素进行拷贝还是移
 
 `vector` 在扩容时会根据元素的**移动构造函数是否有 `noexcept` 声明**来决定。如果有，则为了性能执行移动语义；如果没有，则为了保证**强异常安全**，防止扩容失败导致原数据损坏，会回退到拷贝语义。这在底层是通过 `std::move_if_noexcept` 来实现的
 
-- [ ] 26_1_28
+- [x] 26_1_28
+
+
+
+**为自定义类的移动构造函数加上 `noexcept` 极其重要**
+
+- [x] 26_1_29
+
+
 
 
 
