--- a/随手笔记/139.md
+++ b/随手笔记/139.md
@@ -1,5 +1,7 @@
 1. 
 
+C++
+
 - **第一步：获取对象首地址** 当你有一个指向对象的指针（如 `Base* ptr`），`ptr` 的值就是对象的内存起始地址。
 
 - **第二步：取出虚指针 (vptr)** 在大多数编译器实现中（如 GCC、Clang、MSVC），如果类有虚函数，编译器会将一个隐藏的指针——**vptr（虚表指针）** 放在对象内存布局的**最前面**（即偏移量为 0 的位置）。
@@ -57,12 +59,12 @@
 编译器怎么知道一个类有咩有虚表指针？
 难道不管这个类有没有虚函数 都会取出内存中的前面几个字节么？
 
-- 编译器的时候 就会做了这个工作
+- 编译器 编译的时候 就会做了这个工作
 - 当编译器 解析一个类的声明的时候 如果发现这个类 写了virtual 关键字
 - 或者这个类 里面有 virtual 关键字
 - 就会打上标记 ， 标记为 多态的类
 
-- [ ] 26_1_28
+- [x] 26_1_28
 
 
 
@@ -144,6 +146,7 @@ void quickSort(vector<int>& nums, int left, int right) {
 
 ```
 
+- [ ] 26_1_29
 
 
 
