--- a/随手笔记/115.md
+++ b/随手笔记/115.md
@@ -368,7 +368,7 @@ public:
   A &operator=(const A &) = delete;
 
   static A &getInstance() {
-    static A a;
+    static A a;							// 程序结束的时候 才会销毁
     return a;
   }
 };
