--- a/随手笔记/4.md
+++ b/随手笔记/4.md
@@ -13,7 +13,15 @@
 * [ ] 11_13
 * [ ] 
 
-![image-20251108004429186](png/过滤实现拖拽.png)
+![](png/image-20260213141553403.png)
+
+
+
+
+
+
+
+
 
 3. 增加阴影效果
 
