--- a/随手笔记/94.md
+++ b/随手笔记/94.md
@@ -84,11 +84,27 @@ let old = parts[1].trim().parse::<u16>().map_err(|_| ParseError)?;
 
 
 
+如何理解 map_err
+
+- 就是当发生错误的时候  将原来的错误类型转换成你自己定义的错误类型
+
+- 比如一个函数 返回值 Result<T,u32> 错误必须是u32
+
+  - 但是 调用 sqlx返回的是 sqlx::Error 
+
+  - 所以类型不匹配  map_err 就像一个翻译官 
+
+  - ```rust
+    .map_err(|_| 500)
+    ```
+
+  - 如果是 ok 那么就直接跳过
+
+  - 不ok 就不管它原来是什么 直接换成数字 500
 
 
 
-
-
+- [x] 26_2_5
 
 
 
